Capture IntelliJ runtime UI mode